# openstack-publicdns

./: .gitignore  README.md  neutron-dnscurrent-plugin.spec  openstack-publicdns.spec  openstack_publicdns.spec  requirements.txt  setup.cfg  setup.py
.tito/: tito.props
neutron_dnscurrent/: __init__.py
openstack_publicdns/: __init__.py
openstack_publicdns/designate/: storage.py
openstack_publicdns/neutron/: dhcp.py  dns.py
