[metadata]
name = neutron-dnscurrent-plugin
summary = Use dns_current_name as machine hostname
description-file =
    README.md
author = Unipart Digital
author-email = sysadmins@unipart.io
home-page = https://github.com/unipartdigital/neutron-dnscurrent-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    neutron_dnscurrent

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.extension_drivers =
    dnscurrent = neutron_dnscurrent:DNSCurrentExtensionDriver
